test/corpus/fail/M0115.mo
=========
M0115.mo
=========

let ?foo = true

---

(source_file
  (let_dec
    (quest_pat
      (var_pat
        (identifier)))
    (lit_exp
      (bool_literal))))
